--- a/queryservice/pom.xml
+++ b/queryservice/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <repositories>
         <repository>
-            <id>sachin_ramesh123-QueryService</id>
-           <url>https://packagecloud.io/sachin_ramesh123/QueryService/maven2</url>
+            <id>sachin_r-MedicineQueryService</id>
+            <url>https://packagecloud.io/sachin_r/MedicineQueryService/maven2</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -39,15 +39,27 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mavenproject</groupId>
-            <artifactId>movienlp</artifactId>
-            <version>1.0-SNAPSHOT</version>
-    </dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>3.9.2</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
-            <groupId>com.mavenproject</groupId>
-            <artifactId>medicinenlp</artifactId>
-            <version>1.0-SNAPSHOT</version>
-    </dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>3.9.2</version>
+            <classifier>models</classifier>
+        </dependency>
+        <dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-parser</artifactId>
+            <version>3.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -67,10 +79,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
